<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#c000"
        android:id="@+id/relativeLayout"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"

            android:onClick="back"
            android:text="@string/取消吧"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_alignBottom="@+id/tv_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/btn_back"
            android:text="@string/picture"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:id="@+id/tv_name" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@null"
            android:gravity="center"
            android:onClick="ok"
            android:text="@string/完成"
            android:textColor="#fff"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:background="#d000"
        android:layout_below="@+id/relativeLayout">
        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/gridview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:columnWidth="90dp"
            android:numColumns="auto_fit"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:stretchMode="columnWidth"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        </GridView>
        <RelativeLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:background="#c000" >

            <Button
                android:id="@+id/btn_select"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="select"
                android:text="@string/所有图片"
                android:textColor="#fff"
                android:textSize="14sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>



        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_above="@id/bottom"
            android:background="#fff"
            android:visibility="gone" >
        </ListView>
    </RelativeLayout>
</RelativeLayout>
